--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,13 @@
 ---
 
 @import 'jekyll-theme-cayman-blog';
+
+div.left {
+    float: left;
+    width: 50%;
+}
+
+div.right {
+    float: right;
+    width: 50%;
+}
