--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,13 @@
 ---
-layout: default
+layout: base
 ---
-<article>
+<article class="post">
 
-  <div>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
+
+  <div class="post-content">
     {{ content }}
   </div>
 
